Zebra Change Log

Trunk (unreleased changes)

  BUG FIXES

    PIG-918 Fix infinite loop only columns in first column group are
    specified. (Yan Zhou via rangadi)
  